# qt5-pluginpath

./: CMakeLists.txt  README.md  qtPaths.cpp
